Change the container approach to fix visible scrollbars on windows

--- a/blocks/navigation/navigation.css
+++ b/blocks/navigation/navigation.css
@@ -26,7 +26,7 @@ raqn-navigation .level-1 a:hover {
 }
 
 raqn-navigation > nav > ul {
-  overflow-y: auto;
+  overflow-y: hidden;
   max-height: calc(100vh - var(--header-height));
 }
 
